# aoc2024

./: .aocbench.yml  .gitignore  .gitmodules  Cargo.toml
src/: lib.rs
tests/answers/: day01.txt
