[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
arrayvec = "0.7.6"
rdst = "0.20.14"
fxhash = "0.2.1"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
